--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_SECRET_KEY=2dca580c2a14b55200e784d157207b4d
-API_BASE_URL=https://api.themoviedb.org/
+EXPO_PUBLIC_API_SECRET_KEY=2dca580c2a14b55200e784d157207b4d
+EXPO_PUBLIC_API_BASE_URL=https://api.themoviedb.org/
