add pagination functionality. added readme with demo

--- a/app.json
+++ b/app.json
@@ -4,8 +4,20 @@
     "slug": "movies_app",
     "version": "1.0.0",
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "node_modules/@expo-google-fonts/inter/Inter_400Regular.ttf",
+            "node_modules/@expo-google-fonts/inter/Inter_500Medium.ttf",
+            "node_modules/@expo-google-fonts/inter/Inter_600SemiBold.ttf",
+            "node_modules/@expo-google-fonts/inter/Inter_700Bold.ttf"
+        ]
+        }
+      ]
     ],
+    
     "scheme":"moviesapp"
   },
   "name": "movies_app"
