--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
+    "expo-font": "^12.0.7",
     "expo-image": "^1.12.12",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.17",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-safe-area-context": "4.10.1",
